# Harper

./: .gitignore  Cargo.toml  README.md  build.rs  default-local.nix  default.nix  shell.nix  todo.md
Docs/: Qos.md  why_i_made_this.md
Docs/SWE_Cycle/1.2/: rev1.md  rev1.puml
Docs/SWE_Cycle/1.3/: concern3.md  concerns.md  concerns2.md  laterconcers.md  minimization.md  todov1_3.md
Docs/SWE_Cycle/1.4/: blackbox-mockery.md  concerned_tests.md  concerns.md  todov1_4.md  todov1_4_reviewed.md
Docs/SWE_Cycle/Rev1/: rev1.md
ebpf/: legacy.bpf.c  tc.bpf.c  xdp.bpf.c
harper-ebpf/: harper.bpf.c  harper_legacy.bpf.c  harper_tc.bpf.c  harper_xdp.bpf.c
nixos/tests/: harper.nix
scripts/: check-complete.sh  netns-test.sh
src/: bdd.rs  forwarder.rs  gateway_mode.rs  main.rs  mitm_auto.rs  network.rs  spoofer.rs  utils.rs
src/cli/: color.rs  selector.rs  target_selector.rs
src/forwarder/: backend.rs  ebpf.rs  engine.rs  mock.rs
src/forwarder/snapshots/: harper__forwarder__backend__tests__tcp-forward-scenario.snap  harper__forwarder__backend__tests__two-hosts-topology.snap
src/host/: table.rs
src/infra/: components.rs  mod.rs  shutdown.rs
src/network/: calculator.rs  packet.rs  scanner.rs
src/scanner/: config.rs  engine.rs  mod.rs
src/spoofer/: engine.rs  poison.rs
src/utils/: check_interfaces.rs  check_root.rs  gateway.rs  ip_range.rs  logger.rs  neighbors.rs  net.rs  oui.rs  proc.rs  shutdown.rs  tc.rs
tests/features/: forwarder.feature  gateway_discovery.feature  host_table.feature  ip_range.feature  kernel_relay.feature  mitm_auto.feature  neighbors.feature  network_packets.feature  nft_rules.feature  shaping_modes.feature  shutdown.feature  spoofer.feature  stealth.feature  target_selection.feature  tc_shaping.feature
tests/scenarios/: tcp-forward.toml
tests/topologies/: two-hosts.toml
