[package]
name = "harper"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "sync", "time", "io-util"] }
nix = { version = "0.31.3", features = ["user", "net"] }
pnet = "0.35.0"
oui-data = "0.2.1"
clap = { version = "4.6.4", features = ["derive"] }
aya = "0.14.0"
object = { version = "0.39.1", optional = true }
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3+spec-1.1.0"

[dev-dependencies]
gherkin = "0.16.0"
insta = { version = "1.48.0", features = ["json"] }
proptest = "1.11.0"

[features]
default = []
debug-ebpf = ["dep:object"]
